# RvgeShot

./: .gitignore  README.md  netlify.toml
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: captest.rs
apps/desktop/src-tauri/src/: capture.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  shortcuts.rs  state.rs  tray.rs
apps/desktop/src/components/: WindowFrame.tsx
apps/desktop/src/lib/: canvas.ts  ipc.ts  types.ts
apps/desktop/src/windows/: Editor.tsx  Home.tsx  Overlay.tsx  Settings.tsx
docs/: SPECIFICATION.md  TASK-BREAKDOWN.md
site/: _headers  app.js  index.html  robots.txt  sitemap.xml  styles.css
