[package]
name = "rvgeshot"
version = "0.1.1"
description = "RvgeShot — brzi, privatni screenshot alat"
authors = ["RvgeShot"]
edition = "2021"
rust-version = "1.77"

# Tauri build proizvodi lib (za mobilne/dijeljenje) + binarni entry (main.rs).
[lib]
name = "rvgeshot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Capture ekrana (monitor / prozor). NAPOMENA: provjeri/uskladi verziju s `cargo update`.
xcap = "0.4"
# Encode/decode + crop + blur.
image = "0.25"
webp = "0.3"

# Lokalna baza (bundled => ne treba sistemski SQLite).
rusqlite = { version = "0.32", features = ["bundled"] }

uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
anyhow = "1"
thiserror = "2"
base64 = "0.22"

# Cursor pozicija (za odabir monitora pod mišem). Windows-only.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[features]
# Default produkcijski profil.
default = []

[profile.release]
opt-level = "s"   # optimiziraj za veličinu binarya (premium = mali footprint)
lto = true
codegen-units = 1
strip = true
panic = "abort"
